--- a/index.html
+++ b/index.html
@@ -2,50 +2,60 @@
 <html>
   <head>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
     <script src="java/jquery-1.12.4.js"></script>
     <script src="java/jscript.js"></script>
-    <title>A fantastical adventure</title>
+    <title>To-Do-List</title>
   </head>
   <body>
     <div class="container">
-      <h1>Fill in the blanks to write your story!</h1>
+      <h1>What do you have planned today?</h1>
       <div>
         <form id="formOne">
           <div class="form-group">
-            <label for="person1">A name</label>
-            <input id="person1" class="form-control" type="text">
-          </div>
-          <div class="form-group">
-            <label for="person2">Another name</label>
-            <input id="person2" class="form-control" type="text">
-          </div>
-          <div class="form-group">
-            <label for="animal">An animal</label>
-            <input id="animal" class="form-control" type="text">
-          </div>
-          <div class="form-group">
-            <label for="exclamation">An exclamation</label>
-            <input id="exclamation" class="form-control" type="text">
-          </div>
-          <div class="form-group">
-            <label for="verb">A past tense verb</label>
-            <input id="verb" class="form-control" type="text">
-          </div>
-          <div class="form-group">
-            <label for="noun">A noun</label>
-            <input id="noun" class="form-control" type="text">
+            <label for="task-name">Task Name</label>
+            <input id="task-name" class="form-control" type="text">
           </div>
 
-          <button type="submit" class="btn">Show me the story!</button>
+          <div class="form-group">
+            <label for="task-date"> Date:</label>
+            <input id="task-date" class="form-control" type="date">
+                    <!-- <button type="submit" class='btn'><i class="far fa-calendar-plus"></i>Book!</button>
+                    <img class="img"src="" alt="">
+                  </form> -->
+          </div>
+
+          <div class= "form-group">
+            <label for="priorityLevel">Priority:</label>
+            <select id="priorityLevel">
+              <option value="Yellow">Yellow</option>
+              <option value="Blue">Blue</option>
+              <option value="Red">Red</option>
+            </select>
+          </div>
+<br>
+
+          <div class="form-group">
+            <label for="task-location">Location</label>
+            <input id="task-location" class="form-control" type="text">
+          </div>
+        </div>
+
+          <button type="submit" class="btn-success btn">Add Task:</button>
         </form>
       </div>
 
       <div id="story">
-        <h1>A fantastical adventure</h1>
-        <p>One day, <span class="person1"></span> and <span class="person2"></span> were walking through the woods, when suddenly a giant <span class="animal"></span> appeared. "<span class="exclamation"></span>", <span class="person1"></span> cried. The two of them <span class="verb"></span> as quickly possible, and when they were safe, <span class="person1"></span> and <span class="person2"></span> gave each other a giant <span class="noun"></span>.
-</p>
+        <h1>A look at the day..</h1>
+        <p>Hello <span class="person1"></span> today seems pretty busy. These are your tasks for the day:
+        </p>
+        <ul>
+          <li>Task Name: <span id="return-task-name"></span></li>
+          <li>Task Date: <span id="return-task-date"></span></li>
+          <li>Task Priority: <span id="return-task-priority"></span></li>
+          <li>Task Location: <span id="return-task-location"></span></li>
+        </ul>
+
       </div>
-    </div>
   </body>
 </html>
