add appending task list function and delete task buttons.

--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
 
       <div id="story">
         <h1>A look at the day..</h1>
-        <p>Hello <span class="person1"></span> today seems pretty busy. These are your tasks for the day:
+        <p>Hello! Today seems pretty busy! These are your tasks for the day:
         </p>
-        <ul>
-          <li>Task Name: <span id="return-task-name"></span></li>
-          <li>Task Date: <span id="return-task-date"></span></li>
-          <li>Task Priority: <span id="return-task-priority"></span></li>
-          <li>Task Location: <span id="return-task-location"></span></li>
-        </ul>
+        <div id="listed-tasks">
+          <ul id="#dates">
+          </ul>
+            <div id="delete-buttons">
 
+            </div>
+        </div>
       </div>
   </body>
 </html>
