--- a/index.html
+++ b/index.html
@@ -9,9 +9,28 @@
   </head>
   <body>
     <h1><center>Welcome To Hamdango</center></h1>
+
+
+<!-- Nav Bar -->
+<div class="navbar">
+  <a href="#home">Home</a>
+  <a href="#news">News</a>
+  <div class="dropdown">
+    <button class="dropbtn">More
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+    </div>
+  </div>
+</div>
+<!-- Nav Done -->
+
+
     <div class="jumbotron">
-      <br>
-            <div>
+
         <form id="formOne">
           <div class="form-group">
             <label for="task-name">Film Title</label>
@@ -30,7 +49,8 @@
               <option value="Noon">Afternoon</option>
               <option value="Eve">Evening</option>
             </select>
-<br>
+            <br>
+<!-- PRICE MENU -->
           <div class= "form-group">
             <label for="priorityLevel">Price:</label>
             <select id="priorityLevel">
@@ -40,6 +60,7 @@
             </select>
           </div>
 <br>
+<!-- COST -->
 
           <div class="form-group">
             <label for="task-location">Cost:</label>
@@ -52,6 +73,8 @@
         </form>
       </div>
 
+      <!-- HEADER -->
+
       <div id="story">
         <h1>Here at Hamdango we value our veterans, seniors, and students! Coupon avaiable here!</h1>
         <p>Here is your itinerary:
@@ -63,6 +86,86 @@
       </div>
         </div>
       </div>
-        <center><img class="center" src="https://earlymoments.com/upload/EarlyMoments/BRP/green-egg-art.jpg" alt="Smiley face"></center>
+      <!-- STICKY IMAGE -->
+        <img class="sticky" src="https://earlymoments.com/upload/EarlyMoments/BRP/green-egg-art.jpg" alt="Smiley face">
+<!-- BUTTONS FOR NOW SHOWING -->
+        <h2>Now Showing</h2>
+        <div id="myBtnContainer">
+          <button class="btn active" onclick="filterSelection('all')"> Show all</button>
+          <button class="btn" onclick="filterSelection('nature')"> Nature</button>
+          <button class="btn" onclick="filterSelection('cars')"> Cars</button>
+          <button class="btn" onclick="filterSelection('people')"> People</button>
+        </div>
+
+        <!-- Portfolio Gallery Grid -->
+        <div class="row">
+          <div class="column nature">
+            <div class="content">
+              <img src="/w3images/mountains.jpg" alt="Mountains" style="width:100%">
+              <h4>Mountains</h4>
+              <p>Lorem ipsum dolor..</p>
+            </div>
+          </div>
+          <div class="column nature">
+            <div class="content">
+              <img src="/w3images/lights.jpg" alt="Lights" style="width:100%">
+              <h4>Lights</h4>
+              <p>Lorem ipsum dolor..</p>
+            </div>
+          </div>
+          <div class="column nature">
+            <div class="content">
+              <img src="/w3images/nature.jpg" alt="Nature" style="width:100%">
+              <h4>Forest</h4>
+              <p>Lorem ipsum dolor..</p>
+            </div>
+          </div>
+
+          <div class="column cars">
+            <div class="content">
+              <img src="/w3images/cars1.jpg" alt="Car" style="width:100%">
+              <h4>Retro</h4>
+              <p>Lorem ipsum dolor..</p>
+            </div>
+          </div>
+          <div class="column cars">
+            <div class="content">
+              <img src="/w3images/cars2.jpg" alt="Car" style="width:100%">
+              <h4>Fast</h4>
+              <p>Lorem ipsum dolor..</p>
+            </div>
+          </div>
+          <div class="column cars">
+            <div class="content">
+              <img src="/w3images/cars3.jpg" alt="Car" style="width:100%">
+              <h4>Classic</h4>
+              <p>Lorem ipsum dolor..</p>
+            </div>
+          </div>
+
+          <div class="column people">
+            <div class="content">
+              <img src="/w3images/people1.jpg" alt="People" style="width:100%">
+              <h4>Girl</h4>
+              <p>Lorem ipsum dolor..</p>
+            </div>
+          </div>
+          <div class="column people">
+            <div class="content">
+              <img src="/w3images/people2.jpg" alt="People" style="width:100%">
+              <h4>Man</h4>
+              <p>Lorem ipsum dolor..</p>
+            </div>
+          </div>
+          <div class="column people">
+            <div class="content">
+              <img src="/w3images/people3.jpg" alt="People" style="width:100%">
+              <h4>Woman</h4>
+              <p>Lorem ipsum dolor..</p>
+            </div>
+          </div>
+        <!-- END GRID -->
+        </div>
+
   </body>
 </html>
