--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 <!-- Nav Bar -->
-<div class="navbar">
+<center><div class="navbar">
   <a href="#home">Home</a>
   <a href="#news">News</a>
   <div class="dropdown">
@@ -25,7 +25,7 @@
       <a href="#">Link 3</a>
     </div>
   </div>
-</div>
+</div></center>
 <!-- Nav Done -->
 
 
