--- a/index.html
+++ b/index.html
@@ -11,23 +11,28 @@
     <h1><center>Welcome To Hamdango</center></h1>
 
 
-<!-- Nav Bar -->
-<center><div class="navbar">
-  <a href="#home">Home</a>
-  <a href="#news">News</a>
-  <div class="dropdown">
-    <button class="dropbtn">More
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
-    </div>
-  </div>
-</div></center>
-<!-- Nav Done -->
 
+<!-- Nav Bar -->
+<div class="container">
+  <center><div class="navbar">
+    <a href="#home">Home</a>
+    <a href="#news">News</a>
+    <div class="dropdown">
+      <button class="dropbtn">More
+        <i class="fa fa-caret-down"></i>
+          </button>
+      <div class="dropdown-content">
+        <a href="#">Link 1</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>
+      </div>
+    </div>
+  </div></center>
+</div>
+<!-- Nav Done -->
+<!-- STICKY IMAGE -->
+  <img class="sticky" src="https://earlymoments.com/upload/EarlyMoments/BRP/green-egg-art.jpg" alt="Smiley face">
+<!-- BUTTONS FOR NOW SHOWING -->
 
     <div class="jumbotron">
 
@@ -86,9 +91,7 @@
       </div>
         </div>
       </div>
-      <!-- STICKY IMAGE -->
-        <img class="sticky" src="https://earlymoments.com/upload/EarlyMoments/BRP/green-egg-art.jpg" alt="Smiley face">
-<!-- BUTTONS FOR NOW SHOWING -->
+
         <h2>Now Showing</h2>
         <div id="myBtnContainer">
           <button class="btn active" onclick="filterSelection('all')"> Show all</button>
@@ -97,27 +100,27 @@
           <button class="btn" onclick="filterSelection('people')"> People</button>
         </div>
 
-        <!-- Portfolio Gallery Grid -->
+        <!-- Now Showing Gallery Grid -->
         <div class="row">
           <div class="column nature">
             <div class="content">
-              <img src="/w3images/mountains.jpg" alt="Mountains" style="width:100%">
-              <h4>Mountains</h4>
-              <p>Lorem ipsum dolor..</p>
+              <img src="http://www.gstatic.com/tv/thumb/v22vodart/7825626/p7825626_v_v8_ad.jpg" alt="movie1" style="width:100%">
+              <h4>Inception</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum..</p>
             </div>
           </div>
           <div class="column nature">
             <div class="content">
-              <img src="/w3images/lights.jpg" alt="Lights" style="width:100%">
-              <h4>Lights</h4>
-              <p>Lorem ipsum dolor..</p>
+              <img src="https://images-na.ssl-images-amazon.com/images/I/81V%2Bb69u3xL._SL1500_.jpg" alt="movie2" style="width:100%">
+              <h4>Catch Me If You Can</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
           </div>
           <div class="column nature">
             <div class="content">
-              <img src="/w3images/nature.jpg" alt="Nature" style="width:100%">
-              <h4>Forest</h4>
-              <p>Lorem ipsum dolor..</p>
+              <img src="http://www.gstatic.com/tv/thumb/v22vodart/14568731/p14568731_v_v8_ad.jpg" alt="Nature" style="width:100%">
+              <h4>John Wick 3</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum..</p>
             </div>
           </div>
 
